# spining_dodecahedron

./: .gitmodules  CMakeLists.txt  README.md
lib/SFML/include/SFML/: Config.hpp
lib/SFML/include/SFML/Graphics/: Font.hpp  Glsl.hpp  Glsl.inl  Image.hpp  Rect.hpp  RectangleShape.hpp  RenderTarget.hpp  RenderTexture.hpp  RenderWindow.hpp  Shape.hpp  Sprite.hpp  Text.hpp  Texture.hpp  Transformable.hpp  VertexArray.hpp  VertexBuffer.hpp  View.hpp
lib/SFML/include/SFML/System/: FileInputStream.hpp  InputStream.hpp  MemoryInputStream.hpp  String.hpp  Utf.hpp  Vector2.hpp  Vector3.hpp
lib/SFML/include/SFML/Window/: Event.hpp  VideoMode.hpp  Window.hpp
lib/imgui/: imconfig.h
src/: camera.cpp  camera.h  camera_controller.cpp  camera_controller.h  color.h  drawer.h  engine.cpp  engine.h  graphics_utils.cpp  graphics_utils.h  main.cpp  matrix.h  matrix_transform.cpp  matrix_transform.h  menu.cpp  menu.h  screen.cpp  screen.h  triangle.h  vector.h
src/engine/: camera.cpp  camera.h  constants.h  controller.h  draw_list.cpp  draw_list.h  engine.cpp  engine.h  graphics_utils.cpp  matrix.h  matrix_transform.cpp  matrix_transform.h  mesh.cpp  mesh.h  obj_parser.cpp  obj_parser.h  object.cpp  object.h  plane.cpp  plane.h  rigid_body.cpp  rigid_body.h  settings.h  vector.h  view.cpp  view.h  viewport.h  world.cpp  world.h
src/engine/math/: angle.h  color.h  frustum.cpp  frustum.h  math.h  matrix.h  matrix_transform.cpp  matrix_transform.h  plane.cpp  plane.h  vector.cpp  vector.h
src/engine/render/: renderer.h  renderer_2d.cpp  renderer_2d.h
(+3 files in other folders)
